--- a/Home/index.css
+++ b/Home/index.css
@@ -566,3 +566,66 @@ a i {
     font-size: 13px;
   }
 }
+
+
+/* RIGHT SLIDE MENU */
+#sideMenu {
+  position: fixed;
+  top: 0;
+  right: -250px; 
+  height: 100%;
+  width: 250px;
+  background: white;
+  box-shadow: -3px 0px 10px rgba(0,0,0,0.4);
+  transition: 0.3s ease;
+  padding: 20px;
+  z-index: 9999;
+}
+
+#sideMenu ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 40px;
+}
+
+#sideMenu ul li a {
+  display: block;
+  padding: 12px;
+  font-size: 18px;
+  border-bottom: 1px solid #ccc;
+  text-decoration: none;
+  color: black;
+}
+
+#sideMenu a:hover {
+  background: #f2f2f2;
+}
+
+#closeBtn {
+  background: none;
+  border: none;
+  font-size: 25px;
+  float: right;
+  cursor: pointer;
+}
+
+/* Overlay background */
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.4);
+  display: none;
+  z-index: 999;
+}
+
+/* Menu Button */
+.menu-button {
+  background: none;
+  border: none;
+  font-size: 22px;
+  cursor: pointer;
+}
+
